// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tile 2/1/1 of seed 12345 stays the same 1`] = `
{
  "biomeIds": 1789090434,
  "debugColors": 519870909,
  "indices": 3061001994,
  "positions": 1058526066,
  "triangles": 6145,
  "vertices": 7169,
}
`;

exports[`tile 2/1/1 of seed 12345 with water stays the same 1`] = `
{
  "biomeIds": 1789090434,
  "indices": 3061001994,
  "positions": 1058526066,
  "riverIndices": 4270476897,
  "riverPositions": 1397364596,
  "riverShapes": 293112841,
  "riverTriangles": 724,
  "triangles": 6145,
  "vertices": 7169,
}
`;
